name:                pipes-process
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            System
build-type:          Simple
cabal-version:       >=1.10
data-files:
        Example.hs

library
  exposed-modules:     Pipes.Process
  build-depends:       base       >=4.6  && <4.7,
                       bytestring >=0.10 && <0.11,
                       exceptions >= 0.3 && < 0.4,
                       pipes      >=4.0  && <4.1,
                       pipes-safe >= 2.0 && < 2.1,
                       process    >=1.1  && <1.2,
                       stm        >=2.4  && <2.5
  default-language:    Haskell2010
